syntax = "proto3";

option csharp_namespace = "VKEshop.Basket.API.Protos";

package Basket.API;

service Basket{
	rpc AddToBasket(AddToBasketRequest) returns (AddToBasketResponse){}
	rpc DeleteBasket(DeleteBasketRequest) returns (DeleteBasketResponse){}
	rpc GetBasket(GetBasketRequest) returns (GetBasketResponse); 
}

message AddToBasketRequest{
	repeated BasketItem items = 1;
}

message BasketItem{
	int32 product_id = 1;
	int32 quantity = 2;
}

message AddToBasketResponse{
	repeated BasketItem items = 1;
}

message DeleteBasketRequest{

}

message DeleteBasketResponse{
   bool	isSuccess = 1;
}

message GetBasketRequest{

}

message GetBasketResponse{
	repeated BasketItem items = 1;
}